# Programming_Projects

./: .gitignore  N-Body Problem.cpp  README.md  trajectory.csv
fluid-sim/: CMakeLists.txt
fluid-sim/include/: MACGrid.h  Particle.h  PressureSolver.h  Simulation.h  Vector2.h
fluid-sim/src/: MACGrid.cpp  Particle.cpp  PressureSolver.cpp  Simulation.cpp  Vector2.cpp  main.cpp
letterboxd-watchlist-comparison/: config_template.json  gui.py  main.py  scraper.py  tmdb.py  utils.py
nbody-sim/: trajectory.csv
nbody-sim/include/: body.h  collision.h  constants.h  fragmentation.h  physics.h  simulation.h  utils.h  vector3.h
nbody-sim/src/: collision.cpp  fragmentation.cpp  main.cpp  physics.cpp  simulation.cpp
qtunnel-sim/: CMakeLists.txt
qtunnel-sim/include/: Constants.hpp  Grid.hpp  PotentialBarrier.hpp  Solver.hpp  Utils.hpp  Wavefunction.hpp
qtunnel-sim/src/: Grid.cpp  PotentialBarrier.cpp  Solver.cpp  Utils.cpp  Wavefunction.cpp  main.cpp
